--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,8 @@
 nav {
   background: linear-gradient(to right, #283048, #859398);
   color: white;
+  position: sticky;
+  top: 0;
 }
 ul {
   display: flex;
@@ -27,4 +29,43 @@ li {
   color: white;
   list-style: none;
   font-size: 2rem;
+}
+
+.home-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  min-height: 100vh;
+  background: linear-gradient(to bottom, #007991, #78ffd6);
+}
+.shoes-section {
+  display: flex;
+  gap: 105px;
+  padding: 55px;
+}
+.shoes-section > img {
+  width: 350px;
+}
+
+div.shoes-section > :nth-child(1) {
+  transform: rotate(-10deg);
+}
+div.shoes-section > :nth-child(3) {
+  transform: rotate(10deg);
+}
+.info-section {
+  justify-self: baseline;
+}
+
+.shop--btn {
+  padding: 15px 25px;
+  background-color: inherit;
+  cursor: pointer;
+}
+.shop--btn:hover {
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
