--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ nav {
   position: sticky;
   top: 0;
 }
+
 ul {
   display: flex;
   justify-content: space-around;
@@ -49,7 +50,7 @@ li {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  min-height: 100vh;
+  min-height: 90vh;
   background: linear-gradient(to bottom, #007991, #78ffd6);
 }
 .cocktail-section {
@@ -87,6 +88,30 @@ div.cocktail-section > :nth-child(3) {
   height: 250px;
 }
 
+.card {
+  position: relative;
+}
+
+.text {
+  display: none;
+}
+.text.active {
+  position: absolute;
+  top: 30%;
+  left: 5%;
+  text-align: center;
+  color: white;
+  width: 90%;
+  height: 50%;
+  padding: 10px;
+}
+.text.active > h2 {
+  background-color: hsl(0 0% 1% / 0.4);
+}
+.active {
+  display: block;
+}
+
 .card > * {
   margin: 5px 0px;
 }
@@ -111,6 +136,10 @@ div.cocktail-section > :nth-child(3) {
   gap: 25px;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   background: linear-gradient(to bottom, #6d6027, #d3cbb8);
+}
+.img-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 .cart-container {
   position: absolute;
